# prompt-management

./: .gitignore  DNS.md  HOSTS.md  IMAGES.md  PODMAN.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: ci_frontend.yml  ci_server.yml
containers/app/: .gitignore  sample.docker-compose.dev.yml  sample.docker-compose.prod.yml  sample.env
containers/app/database/: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  sample.init.sql.prod  sample.postgresql.conf.dev
containers/app/frontend/: DESCRIPTION.md  Dockerfile.dev  Dockerfile.prod  package.json  pnpm-lock.yaml
containers/app/server/: DESCRIPTION.md  Dockerfile.dev  Dockerfile.prod  README.md  ftl.yaml  hatch.toml  pyproject.toml  requirements.txt  sample.env
containers/app/server/.ftl/: config.yaml  deploy.sh
containers/app/server/src/prompt_management/: __init__.py  about.py  app.py
containers/app/server/src/prompt_management/config/: __init__.py  baseConfig.py  developmentConfig.py  productionConfig.py
containers/app/server/src/prompt_management/utils/: __init__.py  app_utils.py
containers/app/server/tests/: test_app.py
