[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt_management"
version = "0.0.1"
description = "Prompt Management Server"
dependencies = [
    "flask>=2.0.0",
    "apiflask>=2.0.0",
    "python-dotenv>=1.0.0"
]

[tool.hatch.build]
include = [
    "src/**/*.py",
]
packages = ["src"]
